migration/orion-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api-rest
spec:
  selector:
    matchLabels:
      app: orion-api-rest
  template:
    metadata:
      labels:
        app: orion-api-rest
    spec:
      
      containers:
      - name: orion
        image: 086351999451.dkr.ecr.ap-south-1.amazonaws.com/orion-api-rest:1.0
        securityContext:
          privileged: true
          runAsUser: 0
        resources: {}
          # limit:
          #   cpu: 1
          #   memory: 1024
        ports:
        - name: orion-api-rest
          containerPort: 9000
        - name: communication 
          containerPort: 2552   #
        livenessProbe:
          httpGet:
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 4
          failureThreshold: 10
          initialDelaySeconds: 25
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 2
          failureThreshold: 10
          initialDelaySeconds: 15
          successThreshold: 1
