migration/orion-rest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-api-rest
spec:
  selector:
    app: orion-api-rest
  ports:
  - name: traffic
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: comms
    port: 2552
  type: ClusterIP
