migration/orion-rest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion-api-rest
spec:
  ingressClassName: nginx
  rules:
  - host: orion.s9.devopscloud.link
    http:
      paths:
      - backend:
          service:
            name: orion-api-rest
            port:
              number: 9000
        path: /
        pathType: Prefix
